--- a/public/styles/app.css
+++ b/public/styles/app.css
@@ -637,8 +637,8 @@ video {
 @media (min-width: 1280px) {
   .container {
     max-width: 1280px;
-    padding-right: 4.625rem;
-    padding-left: 4.625rem;
+    padding-right: 0.625rem;
+    padding-left: 0.625rem;
   }
 }
 
@@ -722,6 +722,7 @@ video {
 @media screen and (min-width: 1280px) {
   .dark .products {
     background-image: url("../images/products-bg.png");
+    background-repeat: no-repeat;
   }
 
   .products {
@@ -729,8 +730,7 @@ video {
           rgba(243, 244, 246, 0.65),
           rgba(243, 244, 246, 0.65)
         ),
-        url("../images/products-bg.png");
-    height: 700px;
+        url("../images/products-bg.png"), no-repeat;
   }
 }
 
@@ -821,6 +821,14 @@ video {
   margin-bottom: 1.75rem;
 }
 
+.mt-1\.5 {
+  margin-top: 0.375rem;
+}
+
+.mt-2 {
+  margin-top: 0.5rem;
+}
+
 .mt-3 {
   margin-top: 0.75rem;
 }
@@ -829,8 +837,16 @@ video {
   margin-top: 1rem;
 }
 
+.mt-5 {
+  margin-top: 1.25rem;
+}
+
 .mt-auto {
   margin-top: auto;
+}
+
+.mt-2\.5 {
+  margin-top: 0.625rem;
 }
 
 .line-clamp-2 {
@@ -863,6 +879,10 @@ video {
   display: inline-flex;
 }
 
+.grid {
+  display: grid;
+}
+
 .hidden {
   display: none;
 }
@@ -890,6 +910,10 @@ video {
 
 .h-24 {
   height: 6rem;
+}
+
+.h-3 {
+  height: 0.75rem;
 }
 
 .h-30 {
@@ -924,6 +948,10 @@ video {
   height: 22px;
 }
 
+.h-\[26px\] {
+  height: 26px;
+}
+
 .h-\[30px\] {
   height: 30px;
 }
@@ -954,6 +982,10 @@ video {
 
 .w-28 {
   width: 7rem;
+}
+
+.w-3 {
+  width: 0.75rem;
 }
 
 .w-30 {
@@ -990,6 +1022,10 @@ video {
 
 .w-\[100px\] {
   width: 100px;
+}
+
+.w-\[26px\] {
+  width: 26px;
 }
 
 .w-\[30px\] {
@@ -1034,6 +1070,10 @@ video {
   cursor: pointer;
 }
 
+.grid-cols-2 {
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+
 .flex-col {
   flex-direction: column;
 }
@@ -1056,6 +1096,14 @@ video {
 
 .justify-between {
   justify-content: space-between;
+}
+
+.gap-2\.5 {
+  gap: 0.625rem;
+}
+
+.gap-3\.5 {
+  gap: 0.875rem;
 }
 
 .gap-x-2 {
@@ -1124,8 +1172,16 @@ video {
   overflow-y: scroll;
 }
 
+.rounded-2xl {
+  border-radius: 1rem;
+}
+
 .rounded-3xl {
   border-radius: 1.5rem;
+}
+
+.rounded-\[100px\] {
+  border-radius: 100px;
 }
 
 .rounded-full {
@@ -1190,6 +1246,11 @@ video {
   background-color: rgb(243 244 246 / var(--tw-bg-opacity, 1));
 }
 
+.bg-gray-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(209 213 219 / var(--tw-bg-opacity, 1));
+}
+
 .bg-orange-200\/20 {
   background-color: rgb(254 215 170 / 0.2);
 }
@@ -1229,8 +1290,17 @@ video {
   background-repeat: no-repeat;
 }
 
+.p-2 {
+  padding: 0.5rem;
+}
+
 .p-6 {
   padding: 1.5rem;
+}
+
+.px-2\.5 {
+  padding-left: 0.625rem;
+  padding-right: 0.625rem;
 }
 
 .px-3 {
@@ -1290,6 +1360,10 @@ video {
 
 .pt-3 {
   padding-top: 0.75rem;
+}
+
+.pt-8 {
+  padding-top: 2rem;
 }
 
 .text-center {
@@ -1363,6 +1437,11 @@ video {
   color: rgb(209 213 219 / var(--tw-text-opacity, 1));
 }
 
+.text-gray-400 {
+  --tw-text-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-text-opacity, 1));
+}
+
 .text-orange-200 {
   --tw-text-opacity: 1;
   color: rgb(254 215 170 / var(--tw-text-opacity, 1));
@@ -1381,6 +1460,11 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
+}
+
+.text-yellow-400 {
+  --tw-text-opacity: 1;
+  color: rgb(250 204 21 / var(--tw-text-opacity, 1));
 }
 
 .text-zinc-700 {
@@ -1459,6 +1543,100 @@ video {
   background: #38383d;
   height: 20px;
   border-radius: 20px;
+}
+
+.flex-center {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.product-title {
+  font-family: Morabba Medium;
+  font-size: 1.5rem;
+  line-height: 2rem;
+  --tw-text-opacity: 1;
+  color: rgb(63 63 70 / var(--tw-text-opacity, 1));
+}
+
+@media (min-width: 768px) {
+  .product-title {
+    font-size: 3rem;
+    line-height: 1;
+  }
+}
+
+.product-title:where(.dark, .dark *) {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity, 1));
+}
+
+.product-subtitle {
+  margin-top: 0.125rem;
+  font-family: Morabba Light;
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+  --tw-text-opacity: 1;
+  color: rgb(63 63 70 / var(--tw-text-opacity, 1));
+}
+
+@media (min-width: 768px) {
+  .product-subtitle {
+    margin-top: 0.375rem;
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+  }
+}
+
+.product-subtitle:where(.dark, .dark *) {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity, 1));
+}
+
+.section-link {
+  display: flex;
+  height: 2.5rem;
+  cursor: pointer;
+  align-items: center;
+  gap: 0px;
+  border-radius: 0.375rem;
+  padding-right: 0.75rem;
+  padding-left: 0.25rem;
+  font-size: 1rem;
+  line-height: 1.5rem;
+  --tw-text-opacity: 1;
+  color: rgb(253 186 116 / var(--tw-text-opacity, 1));
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.section-link:hover {
+  background-color: rgb(253 186 116 / 0.2);
+}
+
+@media (min-width: 768px) {
+  .section-link {
+    -moz-column-gap: 0.25rem;
+         column-gap: 0.25rem;
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
+}
+
+.lined {
+  position: relative;
+}
+
+.lined::after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 1px;
+  background: #ef4444;
+  position: absolute;
+  top: 50%;
+  left: 0;
 }
 
 .hover\:cursor-pointer:hover {
@@ -1572,6 +1750,10 @@ video {
 }
 
 @media (min-width: 640px) {
+  .sm\:grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
   .sm\:text-3xl {
     font-size: 1.875rem;
     line-height: 2.25rem;
@@ -1598,8 +1780,28 @@ video {
     margin-bottom: 0.5rem;
   }
 
+  .md\:mt-12 {
+    margin-top: 3rem;
+  }
+
+  .md\:mt-2\.5 {
+    margin-top: 0.625rem;
+  }
+
+  .md\:mt-5 {
+    margin-top: 1.25rem;
+  }
+
+  .md\:mt-4 {
+    margin-top: 1rem;
+  }
+
   .md\:block {
     display: block;
+  }
+
+  .md\:inline-block {
+    display: inline-block;
   }
 
   .md\:flex {
@@ -1610,20 +1812,69 @@ video {
     display: none;
   }
 
+  .md\:h-6 {
+    height: 1.5rem;
+  }
+
+  .md\:h-9 {
+    height: 2.25rem;
+  }
+
+  .md\:h-\[22px\] {
+    height: 22px;
+  }
+
+  .md\:h-\[30px\] {
+    height: 30px;
+  }
+
   .md\:min-h-screen {
     min-height: 100vh;
+  }
+
+  .md\:w-6 {
+    width: 1.5rem;
+  }
+
+  .md\:w-9 {
+    width: 2.25rem;
+  }
+
+  .md\:w-\[22px\] {
+    width: 22px;
   }
 
   .md\:w-\[98\%\] {
     width: 98%;
   }
 
+  .md\:w-auto {
+    width: auto;
+  }
+
   .md\:max-w-\[460px\] {
     max-width: 460px;
   }
 
+  .md\:gap-5 {
+    gap: 1.25rem;
+  }
+
   .md\:bg-home-desktop {
     background-image: url('../images/headerBgDesktop.webp');
+  }
+
+  .md\:p-5 {
+    padding: 1.25rem;
+  }
+
+  .md\:px-3\.5 {
+    padding-left: 0.875rem;
+    padding-right: 0.875rem;
+  }
+
+  .md\:pt-48 {
+    padding-top: 12rem;
   }
 
   .md\:text-4xl {
@@ -1636,6 +1887,21 @@ video {
     line-height: 1;
   }
 
+  .md\:text-base {
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
+
+  .md\:text-lg {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
+
+  .md\:text-sm {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+  }
+
   .md\:text-xl {
     font-size: 1.25rem;
     line-height: 1.75rem;
@@ -1645,6 +1911,10 @@ video {
 @media (min-width: 1024px) {
   .lg\:w-\[95\%\] {
     width: 95%;
+  }
+
+  .lg\:grid-cols-4 {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
   }
 
   .lg\:gap-x-5 {
@@ -1684,6 +1954,10 @@ video {
 }
 
 @media (min-width: 1280px) {
+  .xl\:inline-block {
+    display: inline-block;
+  }
+
   .xl\:flex {
     display: flex;
   }
@@ -1750,6 +2024,11 @@ video {
 .dark\:text-white:where(.dark, .dark *) {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
+}
+
+.dark\:text-zinc-700:where(.dark, .dark *) {
+  --tw-text-opacity: 1;
+  color: rgb(63 63 70 / var(--tw-text-opacity, 1));
 }
 
 .dark\:text-zinc-800:where(.dark, .dark *) {
