--- a/src/input.css
+++ b/src/input.css
@@ -69,7 +69,8 @@
           rgba(243, 244, 246, 0.65),
           rgba(243, 244, 246, 0.65)
         ),
-        url("../images/products-bg.png"), no-repeat;
+        url("../images/products-bg.png");
+      background-repeat: no-repeat;
     }
   }
 }
