--- a/public/styles/app.css
+++ b/public/styles/app.css
@@ -735,6 +735,81 @@ video {
   }
 }
 
+.category-item1 {
+  background: linear-gradient(
+        270deg,
+        rgba(0, 0, 0, 0.6) 33.85%,
+        rgba(0, 0, 0, 0.1) 100%
+      ),
+      url("../images/categories/category-right.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.category-item2 {
+  background: linear-gradient(
+        270deg,
+        rgba(0, 0, 0, 0.6) 33.85%,
+        rgba(0, 0, 0, 0.1) 100%
+      ),
+      url("../images/categories/category-left.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.swiper-button-prev-custom,
+  .swiper-button-next-custom {
+  height: 2.25rem;
+  width: 2.25rem;
+  cursor: pointer;
+  border-radius: 9999px;
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
+  --tw-text-opacity: 1;
+  color: rgb(63 63 70 / var(--tw-text-opacity, 1));
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.swiper-button-prev-custom:hover,
+  .swiper-button-next-custom:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(209 213 219 / var(--tw-bg-opacity, 1));
+}
+
+@media (min-width: 768px) {
+  .swiper-button-prev-custom,
+  .swiper-button-next-custom {
+    height: 2.75rem;
+    width: 2.75rem;
+  }
+}
+
+.swiper-button-prev-custom:where(.dark, .dark *),
+  .swiper-button-next-custom:where(.dark, .dark *) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(63 63 70 / var(--tw-bg-opacity, 1));
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity, 1));
+}
+
+.swiper-button-prev-custom:hover:where(.dark, .dark *),
+  .swiper-button-next-custom:hover:where(.dark, .dark *) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
+  --tw-text-opacity: 1;
+  color: rgb(63 63 70 / var(--tw-text-opacity, 1));
+}
+
+.swiper-button-prev-custom {
+  --tw-rotate: 180deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
 .invisible {
   visibility: hidden;
 }
@@ -814,12 +889,20 @@ video {
   margin-bottom: 0.375rem;
 }
 
+.mb-10 {
+  margin-bottom: 2.5rem;
+}
+
 .mb-3 {
   margin-bottom: 0.75rem;
 }
 
 .mb-7 {
   margin-bottom: 1.75rem;
+}
+
+.mb-8 {
+  margin-bottom: 2rem;
 }
 
 .mt-1\.5 {
@@ -935,10 +1018,6 @@ video {
 
 .h-\[200px\] {
   height: 200px;
-}
-
-.h-\[2200px\] {
-  height: 2200px;
 }
 
 .h-\[22px\] {
@@ -1067,12 +1146,20 @@ video {
   cursor: pointer;
 }
 
+.grid-cols-1 {
+  grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+
 .grid-cols-2 {
   grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 
 .flex-col {
   flex-direction: column;
+}
+
+.flex-wrap {
+  flex-wrap: wrap;
 }
 
 .items-end {
@@ -1099,8 +1186,20 @@ video {
   gap: 0.625rem;
 }
 
+.gap-3 {
+  gap: 0.75rem;
+}
+
 .gap-3\.5 {
   gap: 0.875rem;
+}
+
+.gap-5 {
+  gap: 1.25rem;
+}
+
+.gap-\[29px\] {
+  gap: 29px;
 }
 
 .gap-x-2 {
@@ -1126,6 +1225,10 @@ video {
 .gap-x-6 {
   -moz-column-gap: 1.5rem;
        column-gap: 1.5rem;
+}
+
+.gap-y-4 {
+  row-gap: 1rem;
 }
 
 .space-y-3 > :not([hidden]) ~ :not([hidden]) {
@@ -1559,7 +1662,7 @@ video {
 @media (min-width: 768px) {
   .product-title {
     font-size: 3rem;
-    line-height: 1;
+    line-height: 48px;
   }
 }
 
@@ -1572,7 +1675,7 @@ video {
   margin-top: 0.125rem;
   font-family: Morabba Light;
   font-size: 1.125rem;
-  line-height: 1.75rem;
+  line-height: 2rem;
   --tw-text-opacity: 1;
   color: rgb(63 63 70 / var(--tw-text-opacity, 1));
 }
@@ -1581,7 +1684,7 @@ video {
   .product-subtitle {
     margin-top: 0.375rem;
     font-size: 1.875rem;
-    line-height: 2.25rem;
+    line-height: 48px;
   }
 }
 
@@ -1694,6 +1797,10 @@ video {
   height: 3.5rem;
 }
 
+.child\:h-\[142px\] > * {
+  height: 142px;
+}
+
 .child\:cursor-pointer > * {
   cursor: pointer;
 }
@@ -1711,6 +1818,10 @@ video {
        column-gap: 0.5rem;
 }
 
+.child\:rounded-2xl > * {
+  border-radius: 1rem;
+}
+
 .child\:py-5 > * {
   padding-top: 1.25rem;
   padding-bottom: 1.25rem;
@@ -1718,6 +1829,10 @@ video {
 
 .child\:pr-2\.5 > * {
   padding-right: 0.625rem;
+}
+
+.child\:pr-7 > * {
+  padding-right: 1.75rem;
 }
 
 .child\:leading-\[56px\] > * {
@@ -1792,6 +1907,10 @@ video {
     margin-bottom: 0.5rem;
   }
 
+  .md\:mb-20 {
+    margin-bottom: 5rem;
+  }
+
   .md\:mt-12 {
     margin-top: 3rem;
   }
@@ -1848,6 +1967,10 @@ video {
     width: 2.25rem;
   }
 
+  .md\:w-\[200px\] {
+    width: 200px;
+  }
+
   .md\:w-\[22px\] {
     width: 22px;
   }
@@ -1864,8 +1987,24 @@ video {
     max-width: 460px;
   }
 
+  .md\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
   .md\:gap-5 {
     gap: 1.25rem;
+  }
+
+  .md\:gap-\[18px\] {
+    gap: 18px;
+  }
+
+  .md\:gap-\[65px\] {
+    gap: 65px;
+  }
+
+  .md\:gap-y-7 {
+    row-gap: 1.75rem;
   }
 
   .md\:bg-home-desktop {
@@ -1913,6 +2052,14 @@ video {
   .md\:text-xl {
     font-size: 1.25rem;
     line-height: 1.75rem;
+  }
+
+  .child\:md\:h-\[248px\] > * {
+    height: 248px;
+  }
+
+  .child\:md\:pr-12 > * {
+    padding-right: 3rem;
   }
 }
 
