--- a/src/input.css
+++ b/src/input.css
@@ -73,6 +73,33 @@
       background-repeat: no-repeat;
     }
   }
+  .category-item1 {
+    background: linear-gradient(
+        270deg,
+        rgba(0, 0, 0, 0.6) 33.85%,
+        rgba(0, 0, 0, 0.1) 100%
+      ),
+      url("../images/categories/category-right.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+  .category-item2 {
+    background: linear-gradient(
+        270deg,
+        rgba(0, 0, 0, 0.6) 33.85%,
+        rgba(0, 0, 0, 0.1) 100%
+      ),
+      url("../images/categories/category-left.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+  .swiper-button-prev-custom,
+  .swiper-button-next-custom {
+    @apply flex-center w-9 h-9 md:w-11 md:h-11 bg-white dark:bg-zinc-700 text-zinc-700 dark:text-white rounded-full hover:bg-gray-300 dark:hover:bg-white dark:hover:text-zinc-700 transition-all cursor-pointer;
+  }
+  .swiper-button-prev-custom {
+    @apply rotate-180;
+  }
 }
 
 @layer utilities {
@@ -114,10 +141,10 @@
     @apply flex justify-center items-center;
   }
   .product-title {
-    @apply font-morabbaMedium text-2xl md:text-5xl text-zinc-700 dark:text-white;
+    @apply font-morabbaMedium text-2xl/8 md:text-5xl/[48px] text-zinc-700 dark:text-white;
   }
   .product-subtitle {
-    @apply font-morabbaLight text-lg md:text-3xl text-zinc-700 dark:text-white mt-0.5 md:mt-1.5;
+    @apply font-morabbaLight text-lg/8 md:text-3xl/[48px] text-zinc-700 dark:text-white mt-0.5 md:mt-1.5;
   }
   .section-link {
     @apply h-10 pr-3 pl-1  flex items-center gap-0 md:gap-x-1 text-orange-300 hover:bg-orange-300/20 text-base md:text-xl rounded-md transition-all cursor-pointer;
