--- a/public/styles/app.css
+++ b/public/styles/app.css
@@ -881,6 +881,11 @@ video {
   margin-bottom: 1.5rem;
 }
 
+.mx-5 {
+  margin-left: 1.25rem;
+  margin-right: 1.25rem;
+}
+
 .-mb-1 {
   margin-bottom: -0.25rem;
 }
@@ -899,6 +904,10 @@ video {
 
 .mb-3 {
   margin-bottom: 0.75rem;
+}
+
+.mb-5 {
+  margin-bottom: 1.25rem;
 }
 
 .mb-7 {
@@ -935,6 +944,10 @@ video {
 
 .mt-auto {
   margin-top: auto;
+}
+
+.-mt-2 {
+  margin-top: -0.5rem;
 }
 
 .line-clamp-2 {
@@ -977,6 +990,10 @@ video {
 
 .aspect-\[1\/1\] {
   aspect-ratio: 1/1;
+}
+
+.aspect-\[569\/387\] {
+  aspect-ratio: 569/387;
 }
 
 .size-6 {
@@ -1068,12 +1085,28 @@ video {
   height: 100%;
 }
 
+.h-\[130px\] {
+  height: 130px;
+}
+
+.h-\[61px\] {
+  height: 61px;
+}
+
+.h-\[51px\] {
+  height: 51px;
+}
+
 .max-h-\[465px\] {
   max-height: 465px;
 }
 
 .max-h-\[525px\] {
   max-height: 525px;
+}
+
+.max-h-\[51px\] {
+  max-height: 51px;
 }
 
 .w-10 {
@@ -1161,6 +1194,34 @@ video {
 }
 
 .w-px {
+  width: 1px;
+}
+
+.w-\[219px\] {
+  width: 219px;
+}
+
+.w-\[300px\] {
+  width: 300px;
+}
+
+.w-\[129px\] {
+  width: 129px;
+}
+
+.w-\[130px\] {
+  width: 130px;
+}
+
+.w-\[193px\] {
+  width: 193px;
+}
+
+.w-0\.5 {
+  width: 0.125rem;
+}
+
+.w-\[1px\] {
   width: 1px;
 }
 
@@ -1288,6 +1349,11 @@ video {
   row-gap: 3px;
 }
 
+.gap-x-5 {
+  -moz-column-gap: 1.25rem;
+       column-gap: 1.25rem;
+}
+
 .space-y-3 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
   margin-top: calc(0.75rem * calc(1 - var(--tw-space-y-reverse)));
@@ -1315,6 +1381,10 @@ video {
 .divide-gray-100 > :not([hidden]) ~ :not([hidden]) {
   --tw-divide-opacity: 1;
   border-color: rgb(243 244 246 / var(--tw-divide-opacity, 1));
+}
+
+.overflow-hidden {
+  overflow: hidden;
 }
 
 .overflow-y-auto {
@@ -1351,6 +1421,14 @@ video {
 
 .rounded-xl {
   border-radius: 0.75rem;
+}
+
+.rounded-bl-2xl {
+  border-bottom-left-radius: 1rem;
+}
+
+.rounded-bl-4xl {
+  border-bottom-left-radius: 2rem;
 }
 
 .border {
@@ -1480,12 +1558,21 @@ video {
      object-fit: contain;
 }
 
+.object-cover {
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
 .p-2 {
   padding: 0.5rem;
 }
 
 .p-6 {
   padding: 1.5rem;
+}
+
+.p-2\.5 {
+  padding: 0.625rem;
 }
 
 .px-2\.5 {
@@ -1538,6 +1625,11 @@ video {
   padding-bottom: 2rem;
 }
 
+.px-1 {
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
+}
+
 .pb-12 {
   padding-bottom: 3rem;
 }
@@ -1570,8 +1662,16 @@ video {
   padding-top: 2rem;
 }
 
+.pt-2\.5 {
+  padding-top: 0.625rem;
+}
+
 .text-center {
   text-align: center;
+}
+
+.text-end {
+  text-align: end;
 }
 
 .font-dana {
@@ -1622,6 +1722,21 @@ video {
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
+}
+
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
+.text-sm\/7 {
+  font-size: 0.875rem;
+  line-height: 1.75rem;
+}
+
+.text-2xl\/\[34px\] {
+  font-size: 1.5rem;
+  line-height: 34px;
 }
 
 .tracking-normal {
@@ -1684,6 +1799,11 @@ video {
 .text-zinc-700 {
   --tw-text-opacity: 1;
   color: rgb(63 63 70 / var(--tw-text-opacity, 1));
+}
+
+.text-teal-500 {
+  --tw-text-opacity: 1;
+  color: rgb(20 184 166 / var(--tw-text-opacity, 1));
 }
 
 .opacity-0 {
@@ -1765,7 +1885,7 @@ video {
   justify-content: center;
 }
 
-.product-title {
+.section-title {
   font-family: Morabba Medium;
   font-size: 1.5rem;
   line-height: 2rem;
@@ -1774,18 +1894,18 @@ video {
 }
 
 @media (min-width: 768px) {
-  .product-title {
+  .section-title {
     font-size: 3rem;
     line-height: 48px;
   }
 }
 
-.product-title:where(.dark, .dark *) {
+.section-title:where(.dark, .dark *) {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
 }
 
-.product-subtitle {
+.section-subtitle {
   margin-top: 0.125rem;
   font-family: Morabba Light;
   font-size: 1.125rem;
@@ -1795,14 +1915,14 @@ video {
 }
 
 @media (min-width: 768px) {
-  .product-subtitle {
+  .section-subtitle {
     margin-top: 0.375rem;
     font-size: 1.875rem;
     line-height: 48px;
   }
 }
 
-.product-subtitle:where(.dark, .dark *) {
+.section-subtitle:where(.dark, .dark *) {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
 }
@@ -2008,6 +2128,14 @@ video {
     margin-top: 0.5rem;
   }
 
+  .sm\:mb-28 {
+    margin-bottom: 7rem;
+  }
+
+  .sm\:mt-\[15px\] {
+    margin-top: 15px;
+  }
+
   .sm\:h-12 {
     height: 3rem;
   }
@@ -2024,6 +2152,10 @@ video {
     height: 98px;
   }
 
+  .sm\:h-auto {
+    height: auto;
+  }
+
   .sm\:w-12 {
     width: 3rem;
   }
@@ -2038,6 +2170,14 @@ video {
 
   .sm\:w-\[98px\] {
     width: 98px;
+  }
+
+  .sm\:w-\[299px\] {
+    width: 299px;
+  }
+
+  .sm\:w-\[280px\] {
+    width: 280px;
   }
 
   .sm\:grid-cols-3 {
@@ -2077,6 +2217,10 @@ video {
     padding-top: 1.25rem;
   }
 
+  .sm\:font-dana {
+    font-family: Dana Regular;
+  }
+
   .sm\:text-2xl\/\[48px\] {
     font-size: 1.5rem;
     line-height: 48px;
@@ -2111,12 +2255,21 @@ video {
     font-size: 0.75rem;
     line-height: 1rem;
   }
+
+  .sm\:text-lg {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
 }
 
 @media (min-width: 768px) {
   .md\:my-8 {
     margin-top: 2rem;
     margin-bottom: 2rem;
+  }
+
+  .md\:mb-12 {
+    margin-bottom: 3rem;
   }
 
   .md\:mb-2 {
@@ -2212,6 +2365,10 @@ video {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
+  .md\:grid-cols-4 {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+
   .md\:gap-5 {
     gap: 1.25rem;
   }
@@ -2295,6 +2452,10 @@ video {
 
   .lg\:grid-cols-4 {
     grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+
+  .lg\:grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
   .lg\:flex-row {
@@ -2413,6 +2574,10 @@ video {
   background-color: rgb(39 39 42 / var(--tw-bg-opacity, 1));
 }
 
+.dark\:bg-white\/10:where(.dark, .dark *) {
+  background-color: rgb(255 255 255 / 0.1);
+}
+
 .dark\:text-emerald-500:where(.dark, .dark *) {
   --tw-text-opacity: 1;
   color: rgb(16 185 129 / var(--tw-text-opacity, 1));
@@ -2431,6 +2596,11 @@ video {
 .dark\:text-zinc-800:where(.dark, .dark *) {
   --tw-text-opacity: 1;
   color: rgb(39 39 42 / var(--tw-text-opacity, 1));
+}
+
+.dark\:text-emerald-600:where(.dark, .dark *) {
+  --tw-text-opacity: 1;
+  color: rgb(5 150 105 / var(--tw-text-opacity, 1));
 }
 
 .dark\:hover\:bg-emerald-500:hover:where(.dark, .dark *) {
